--- a/docs/docs-ref-autogen/excel/excel/excel.interfaces.cellvalueconditionalformatloadoptions.yml
+++ b/docs/docs-ref-autogen/excel/excel/excel.interfaces.cellvalueconditionalformatloadoptions.yml
@@ -2,9 +2,9 @@
 items:
   - uid: 'excel!Excel.Interfaces.CellValueConditionalFormatLoadOptions:interface'
     summary: |-
-      <span data-ttu-id="fb97c-101">表示单元格值条件格式。</span><span class="sxs-lookup"><span data-stu-id="fb97c-101">Represents a cell value conditional format.</span></span>
+      表示单元格值条件格式。
 
-      <span data-ttu-id="fb97c-102">\[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="fb97c-102">\[ [API set: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: Excel.Interfaces.CellValueConditionalFormatLoadOptions
     fullName: Excel.Interfaces.CellValueConditionalFormatLoadOptions
     langs:
@@ -16,7 +16,7 @@ items:
       - 'excel!Excel.Interfaces.CellValueConditionalFormatLoadOptions#format:member'
       - 'excel!Excel.Interfaces.CellValueConditionalFormatLoadOptions#rule:member'
   - uid: 'excel!Excel.Interfaces.CellValueConditionalFormatLoadOptions#$all:member'
-    summary: '<span data-ttu-id="fb97c-103">为`$all` LoadOptions 指定加载所有标量属性（例如：`Range.address`</span><span class="sxs-lookup"><span data-stu-id="fb97c-103">Specifying `$all` for the LoadOptions loads all the scalar properties (e.g.: `Range.address`</span></span><!-- --><span data-ttu-id="fb97c-104">），但不是导航属性（例如：`Range.format.fill.color`</span><span class="sxs-lookup"><span data-stu-id="fb97c-104">) but not the navigational properties (e.g.: `Range.format.fill.color`</span></span><!-- --><span data-ttu-id="fb97c-105">).</span><span class="sxs-lookup"><span data-stu-id="fb97c-105"></span></span>'
+    summary: 为`$all` LoadOptions 指定加载所有标量属性（例如：`Range.address`<!-- -->），但不是导航属性（例如：`Range.format.fill.color`<!-- -->).
     name: $all
     fullName: $all
     langs:
@@ -29,9 +29,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.CellValueConditionalFormatLoadOptions#format:member'
     summary: |-
-      <span data-ttu-id="fb97c-106">返回一个 format 对象，该对象封装条件格式字体、填充、边框和其他属性。</span><span class="sxs-lookup"><span data-stu-id="fb97c-106">Returns a format object, encapsulating the conditional formats font, fill, borders, and other properties.</span></span>
+      返回一个 format 对象，该对象封装条件格式字体、填充、边框和其他属性。
 
-      <span data-ttu-id="fb97c-107">\[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="fb97c-107">\[ [API set: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: format
     fullName: format
     langs:
@@ -44,9 +44,9 @@ items:
           - 'excel!Excel.Interfaces.ConditionalRangeFormatLoadOptions:interface'
   - uid: 'excel!Excel.Interfaces.CellValueConditionalFormatLoadOptions#rule:member'
     summary: |-
-      <span data-ttu-id="fb97c-108">表示此条件格式中的 Rule 对象。</span><span class="sxs-lookup"><span data-stu-id="fb97c-108">Represents the Rule object on this conditional format.</span></span>
+      指定此条件格式的 Rule 对象。
 
-      <span data-ttu-id="fb97c-109">\[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="fb97c-109">\[ [API set: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: rule
     fullName: rule
     langs:
