--- a/docs/docs-ref-autogen/excel_1_1/excel/excel.interfaces.tablecolumnupdatedata.yml
+++ b/docs/docs-ref-autogen/excel_1_1/excel/excel.interfaces.tablecolumnupdatedata.yml
@@ -1,7 +1,7 @@
 ### YamlMime:UniversalReference
 items:
   - uid: 'excel!Excel.Interfaces.TableColumnUpdateData:interface'
-    summary: '<span data-ttu-id="af0e7-101">一个用于更新 TableColumn 对象上的数据的接口，可用于`tableColumn.set({ ... })`</span><span class="sxs-lookup"><span data-stu-id="af0e7-101">An interface for updating data on the TableColumn object, for use in `tableColumn.set({ ... })`</span></span><!-- --><span data-ttu-id="af0e7-102">.</span><span class="sxs-lookup"><span data-stu-id="af0e7-102"></span></span>'
+    summary: '一个用于更新 TableColumn 对象上的数据的接口，可用于`tableColumn.set({ ... })`<!-- -->.'
     name: Excel.Interfaces.TableColumnUpdateData
     fullName: Excel.Interfaces.TableColumnUpdateData
     langs:
@@ -13,9 +13,9 @@ items:
       - 'excel!Excel.Interfaces.TableColumnUpdateData#values:member'
   - uid: 'excel!Excel.Interfaces.TableColumnUpdateData#name:member'
     summary: |-
-      <span data-ttu-id="af0e7-103">表示表列的名称。</span><span class="sxs-lookup"><span data-stu-id="af0e7-103">Represents the name of the table column.</span></span>
+      指定表格列的名称。
 
-      <span data-ttu-id="af0e7-104">\[[API 集： ExcelApi 1.1 用于获取名称; 1.4 用于设置名称。](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)</span><span class="sxs-lookup"><span data-stu-id="af0e7-104">\[ [API set: ExcelApi 1.1 for getting the name; 1.4 for setting it.](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)</span></span> <span data-ttu-id="af0e7-105">\]</span><span class="sxs-lookup"><span data-stu-id="af0e7-105"></span></span>
+      \[[API 集： ExcelApi 1.1 用于获取名称; 1.4 用于设置名称。](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]
     name: name
     fullName: name
     langs:
@@ -28,9 +28,9 @@ items:
           - string
   - uid: 'excel!Excel.Interfaces.TableColumnUpdateData#values:member'
     summary: |-
-      <span data-ttu-id="af0e7-106">表示指定区域的原始值。</span><span class="sxs-lookup"><span data-stu-id="af0e7-106">Represents the raw values of the specified range.</span></span> <span data-ttu-id="af0e7-107">返回的数据可能是字符串、数字，也可能是布尔值。</span><span class="sxs-lookup"><span data-stu-id="af0e7-107">The data returned could be of type string, number, or a boolean.</span></span> <span data-ttu-id="af0e7-108">包含错误的单元格将返回错误字符串。</span><span class="sxs-lookup"><span data-stu-id="af0e7-108">Cells that contain an error will return the error string.</span></span>
+      表示指定区域的原始值。 返回的数据可能是字符串、数字，也可能是布尔值。 包含错误的单元格将返回错误字符串。
 
-      <span data-ttu-id="af0e7-109">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="af0e7-109">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: values
     fullName: values
     langs:
