--- a/docs/docs-ref-autogen/excel_1_3/excel/excel.interfaces.nameditemcollectionloadoptions.yml
+++ b/docs/docs-ref-autogen/excel_1_3/excel/excel.interfaces.nameditemcollectionloadoptions.yml
@@ -2,9 +2,9 @@
 items:
   - uid: 'excel!Excel.Interfaces.NamedItemCollectionLoadOptions:interface'
     summary: |-
-      <span data-ttu-id="7bf6c-101">属于工作簿或工作表的所有 NamedItem 对象的集合，具体取决于它的访问方式。</span><span class="sxs-lookup"><span data-stu-id="7bf6c-101">A collection of all the NamedItem objects that are part of the workbook or worksheet, depending on how it was reached.</span></span>
+      属于工作簿或工作表的所有 NamedItem 对象的集合，具体取决于它的访问方式。
 
-      <span data-ttu-id="7bf6c-102">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="7bf6c-102">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: Excel.Interfaces.NamedItemCollectionLoadOptions
     fullName: Excel.Interfaces.NamedItemCollectionLoadOptions
     langs:
@@ -18,7 +18,7 @@ items:
       - 'excel!Excel.Interfaces.NamedItemCollectionLoadOptions#value:member'
       - 'excel!Excel.Interfaces.NamedItemCollectionLoadOptions#visible:member'
   - uid: 'excel!Excel.Interfaces.NamedItemCollectionLoadOptions#$all:member'
-    summary: '<span data-ttu-id="7bf6c-103">为`$all` LoadOptions 指定加载所有标量属性（例如：`Range.address`</span><span class="sxs-lookup"><span data-stu-id="7bf6c-103">Specifying `$all` for the LoadOptions loads all the scalar properties (e.g.: `Range.address`</span></span><!-- --><span data-ttu-id="7bf6c-104">），但不是导航属性（例如：`Range.format.fill.color`</span><span class="sxs-lookup"><span data-stu-id="7bf6c-104">) but not the navigational properties (e.g.: `Range.format.fill.color`</span></span><!-- --><span data-ttu-id="7bf6c-105">).</span><span class="sxs-lookup"><span data-stu-id="7bf6c-105"></span></span>'
+    summary: 为`$all` LoadOptions 指定加载所有标量属性（例如：`Range.address`<!-- -->），但不是导航属性（例如：`Range.format.fill.color`<!-- -->).
     name: $all
     fullName: $all
     langs:
@@ -31,9 +31,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.NamedItemCollectionLoadOptions#name:member'
     summary: |-
-      <span data-ttu-id="7bf6c-106">对于集合中的每一项：对象的名称。</span><span class="sxs-lookup"><span data-stu-id="7bf6c-106">For EACH ITEM in the collection: The name of the object.</span></span> <span data-ttu-id="7bf6c-107">只读。</span><span class="sxs-lookup"><span data-stu-id="7bf6c-107">Read-only.</span></span>
+      对于集合中的每一项：对象的名称。
 
-      <span data-ttu-id="7bf6c-108">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="7bf6c-108">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: name
     fullName: name
     langs:
@@ -46,9 +46,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.NamedItemCollectionLoadOptions#type:member'
     summary: |-
-      <span data-ttu-id="7bf6c-109">对于集合中的每一项：指示由名称的公式返回的值的类型。</span><span class="sxs-lookup"><span data-stu-id="7bf6c-109">For EACH ITEM in the collection: Indicates the type of the value returned by the name's formula.</span></span> <span data-ttu-id="7bf6c-110">有关详细信息，请参阅 NamedItemType。</span><span class="sxs-lookup"><span data-stu-id="7bf6c-110">See Excel.NamedItemType for details.</span></span> <span data-ttu-id="7bf6c-111">只读。</span><span class="sxs-lookup"><span data-stu-id="7bf6c-111">Read-only.</span></span>
+      对于集合中的每一项：指定由名称的公式返回的值的类型。 有关详细信息，请参阅 NamedItemType。
 
-      <span data-ttu-id="7bf6c-112">\[[API 集：字符串、整型、双精度、布尔值、范围、错误的 ExcelApi 1.1、数组的 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="7bf6c-112">\[ [API set: ExcelApi 1.1 for String,Integer,Double,Boolean,Range,Error; 1.7 for Array](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集：字符串、整型、双精度、布尔值、范围、错误的 ExcelApi 1.1、数组的 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: type
     fullName: type
     langs:
@@ -61,9 +61,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.NamedItemCollectionLoadOptions#value:member'
     summary: |-
-      <span data-ttu-id="7bf6c-113">对于集合中的每一项：代表由名称的公式计算的值。</span><span class="sxs-lookup"><span data-stu-id="7bf6c-113">For EACH ITEM in the collection: Represents the value computed by the name's formula.</span></span> <span data-ttu-id="7bf6c-114">对于已命名区域，将返回区域地址。</span><span class="sxs-lookup"><span data-stu-id="7bf6c-114">For a named range, will return the range address.</span></span> <span data-ttu-id="7bf6c-115">只读。</span><span class="sxs-lookup"><span data-stu-id="7bf6c-115">Read-only.</span></span>
+      对于集合中的每一项：代表由名称的公式计算的值。 对于已命名区域，将返回区域地址。
 
-      <span data-ttu-id="7bf6c-116">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="7bf6c-116">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: value
     fullName: value
     langs:
@@ -76,9 +76,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.NamedItemCollectionLoadOptions#visible:member'
     summary: |-
-      <span data-ttu-id="7bf6c-117">对于集合中的每一项：指定对象是否可见。</span><span class="sxs-lookup"><span data-stu-id="7bf6c-117">For EACH ITEM in the collection: Specifies whether the object is visible or not.</span></span>
+      对于集合中的每一项：指定该对象是否可见。
 
-      <span data-ttu-id="7bf6c-118">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="7bf6c-118">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: visible
     fullName: visible
     langs:
