--- a/docs/docs-ref-autogen/excel_1_9/excel/excel.interfaces.chartplotarealoadoptions.yml
+++ b/docs/docs-ref-autogen/excel_1_9/excel/excel.interfaces.chartplotarealoadoptions.yml
@@ -2,9 +2,9 @@
 items:
   - uid: 'excel!Excel.Interfaces.ChartPlotAreaLoadOptions:interface'
     summary: |-
-      <span data-ttu-id="b2957-101">此对象表示 chart plotArea 对象的属性。</span><span class="sxs-lookup"><span data-stu-id="b2957-101">This object represents the attributes for a chart plotArea object.</span></span>
+      此对象表示 chart plotArea 对象的属性。
 
-      <span data-ttu-id="b2957-102">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="b2957-102">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: Excel.Interfaces.ChartPlotAreaLoadOptions
     fullName: Excel.Interfaces.ChartPlotAreaLoadOptions
     langs:
@@ -24,7 +24,7 @@ items:
       - 'excel!Excel.Interfaces.ChartPlotAreaLoadOptions#top:member'
       - 'excel!Excel.Interfaces.ChartPlotAreaLoadOptions#width:member'
   - uid: 'excel!Excel.Interfaces.ChartPlotAreaLoadOptions#$all:member'
-    summary: '<span data-ttu-id="b2957-103">为`$all` LoadOptions 指定加载所有标量属性（例如：`Range.address`</span><span class="sxs-lookup"><span data-stu-id="b2957-103">Specifying `$all` for the LoadOptions loads all the scalar properties (e.g.: `Range.address`</span></span><!-- --><span data-ttu-id="b2957-104">），但不是导航属性（例如：`Range.format.fill.color`</span><span class="sxs-lookup"><span data-stu-id="b2957-104">) but not the navigational properties (e.g.: `Range.format.fill.color`</span></span><!-- --><span data-ttu-id="b2957-105">).</span><span class="sxs-lookup"><span data-stu-id="b2957-105"></span></span>'
+    summary: 为`$all` LoadOptions 指定加载所有标量属性（例如：`Range.address`<!-- -->），但不是导航属性（例如：`Range.format.fill.color`<!-- -->).
     name: $all
     fullName: $all
     langs:
@@ -37,9 +37,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ChartPlotAreaLoadOptions#format:member'
     summary: |-
-      <span data-ttu-id="b2957-106">表示图表 plotArea 的格式。</span><span class="sxs-lookup"><span data-stu-id="b2957-106">Represents the formatting of a chart plotArea.</span></span>
+      指定图表 plotArea 的格式。
 
-      <span data-ttu-id="b2957-107">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="b2957-107">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: format
     fullName: format
     langs:
@@ -52,9 +52,9 @@ items:
           - 'excel!Excel.Interfaces.ChartPlotAreaFormatLoadOptions:interface'
   - uid: 'excel!Excel.Interfaces.ChartPlotAreaLoadOptions#height:member'
     summary: |-
-      <span data-ttu-id="b2957-108">表示 plotArea 的高度值。</span><span class="sxs-lookup"><span data-stu-id="b2957-108">Represents the height value of plotArea.</span></span>
+      指定 plotArea 的高度值。
 
-      <span data-ttu-id="b2957-109">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="b2957-109">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: height
     fullName: height
     langs:
@@ -67,9 +67,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ChartPlotAreaLoadOptions#insideHeight:member'
     summary: |-
-      <span data-ttu-id="b2957-110">表示 plotArea 的 insideHeight 值。</span><span class="sxs-lookup"><span data-stu-id="b2957-110">Represents the insideHeight value of plotArea.</span></span>
+      指定 plotArea 的 insideHeight 值。
 
-      <span data-ttu-id="b2957-111">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="b2957-111">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: insideHeight
     fullName: insideHeight
     langs:
@@ -82,9 +82,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ChartPlotAreaLoadOptions#insideLeft:member'
     summary: |-
-      <span data-ttu-id="b2957-112">表示 plotArea 的 insideLeft 值。</span><span class="sxs-lookup"><span data-stu-id="b2957-112">Represents the insideLeft value of plotArea.</span></span>
+      指定 plotArea 的 insideLeft 值。
 
-      <span data-ttu-id="b2957-113">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="b2957-113">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: insideLeft
     fullName: insideLeft
     langs:
@@ -97,9 +97,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ChartPlotAreaLoadOptions#insideTop:member'
     summary: |-
-      <span data-ttu-id="b2957-114">表示 plotArea 的 insideTop 值。</span><span class="sxs-lookup"><span data-stu-id="b2957-114">Represents the insideTop value of plotArea.</span></span>
+      指定 plotArea 的 insideTop 值。
 
-      <span data-ttu-id="b2957-115">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="b2957-115">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: insideTop
     fullName: insideTop
     langs:
@@ -112,9 +112,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ChartPlotAreaLoadOptions#insideWidth:member'
     summary: |-
-      <span data-ttu-id="b2957-116">表示 plotArea 的 insideWidth 值。</span><span class="sxs-lookup"><span data-stu-id="b2957-116">Represents the insideWidth value of plotArea.</span></span>
+      指定 plotArea 的 insideWidth 值。
 
-      <span data-ttu-id="b2957-117">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="b2957-117">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: insideWidth
     fullName: insideWidth
     langs:
@@ -127,9 +127,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ChartPlotAreaLoadOptions#left:member'
     summary: |-
-      <span data-ttu-id="b2957-118">表示 plotArea 的 left 值。</span><span class="sxs-lookup"><span data-stu-id="b2957-118">Represents the left value of plotArea.</span></span>
+      指定 plotArea 的左侧值。
 
-      <span data-ttu-id="b2957-119">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="b2957-119">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: left
     fullName: left
     langs:
@@ -142,9 +142,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ChartPlotAreaLoadOptions#position:member'
     summary: |-
-      <span data-ttu-id="b2957-120">表示 plotArea 的位置。</span><span class="sxs-lookup"><span data-stu-id="b2957-120">Represents the position of plotArea.</span></span>
+      指定 plotArea 的位置。
 
-      <span data-ttu-id="b2957-121">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="b2957-121">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: position
     fullName: position
     langs:
@@ -157,9 +157,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ChartPlotAreaLoadOptions#top:member'
     summary: |-
-      <span data-ttu-id="b2957-122">表示 plotArea 的 top 值。</span><span class="sxs-lookup"><span data-stu-id="b2957-122">Represents the top value of plotArea.</span></span>
+      指定 plotArea 的最高值。
 
-      <span data-ttu-id="b2957-123">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="b2957-123">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: top
     fullName: top
     langs:
@@ -172,9 +172,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ChartPlotAreaLoadOptions#width:member'
     summary: |-
-      <span data-ttu-id="b2957-124">表示 plotArea 的宽度值。</span><span class="sxs-lookup"><span data-stu-id="b2957-124">Represents the width value of plotArea.</span></span>
+      指定 plotArea 的宽度值。
 
-      <span data-ttu-id="b2957-125">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="b2957-125">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: width
     fullName: width
     langs:
