--- a/docs/docs-ref-autogen/excel/excel/excel.interfaces.workbookupdatedata.yml
+++ b/docs/docs-ref-autogen/excel/excel/excel.interfaces.workbookupdatedata.yml
@@ -1,7 +1,7 @@
 ### YamlMime:UniversalReference
 items:
   - uid: 'excel!Excel.Interfaces.WorkbookUpdateData:interface'
-    summary: '<span data-ttu-id="95d7b-101">一个用于更新工作簿对象上的数据的接口，可用于`workbook.set({ ... })`</span><span class="sxs-lookup"><span data-stu-id="95d7b-101">An interface for updating data on the Workbook object, for use in `workbook.set({ ... })`</span></span><!-- --><span data-ttu-id="95d7b-102">.</span><span class="sxs-lookup"><span data-stu-id="95d7b-102"></span></span>'
+    summary: '一个用于更新工作簿对象上的数据的接口，可用于`workbook.set({ ... })`<!-- -->.'
     name: Excel.Interfaces.WorkbookUpdateData
     fullName: Excel.Interfaces.WorkbookUpdateData
     langs:
@@ -12,13 +12,14 @@ items:
       - 'excel!Excel.Interfaces.WorkbookUpdateData#chartDataPointTrack:member'
       - 'excel!Excel.Interfaces.WorkbookUpdateData#isDirty:member'
       - 'excel!Excel.Interfaces.WorkbookUpdateData#properties:member'
+      - 'excel!Excel.Interfaces.WorkbookUpdateData#showPivotFieldList:member'
       - 'excel!Excel.Interfaces.WorkbookUpdateData#use1904DateSystem:member'
       - 'excel!Excel.Interfaces.WorkbookUpdateData#usePrecisionAsDisplayed:member'
   - uid: 'excel!Excel.Interfaces.WorkbookUpdateData#chartDataPointTrack:member'
     summary: |-
-      <span data-ttu-id="95d7b-103">如果工作簿中的所有图表都跟踪它们所附加的实际数据点，则为 True。</span><span class="sxs-lookup"><span data-stu-id="95d7b-103">True if all charts in the workbook are tracking the actual data points to which they are attached.</span></span> <span data-ttu-id="95d7b-104">假如果图表跟踪数据点的索引。</span><span class="sxs-lookup"><span data-stu-id="95d7b-104">False if the charts track the index of the data points.</span></span>
+      如果工作簿中的所有图表都跟踪它们所附加的实际数据点，则为 True。 假如果图表跟踪数据点的索引。
 
-      <span data-ttu-id="95d7b-105">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="95d7b-105">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: chartDataPointTrack
     fullName: chartDataPointTrack
     langs:
@@ -31,9 +32,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.WorkbookUpdateData#isDirty:member'
     summary: |-
-      <span data-ttu-id="95d7b-106">指定自上次保存以来是否对指定的工作簿进行任何更改。</span><span class="sxs-lookup"><span data-stu-id="95d7b-106">Specifies whether or not changes have been made since the workbook was last saved.</span></span> <span data-ttu-id="95d7b-107">如果要关闭修改过的工作簿而不保存或提示保存它，则可以将该属性设置为 true。</span><span class="sxs-lookup"><span data-stu-id="95d7b-107">You can set this property to true if you want to close a modified workbook without either saving it or being prompted to save it.</span></span>
+      指定自上次保存工作簿后是否进行了更改。 如果要关闭修改过的工作簿而不保存或提示保存它，则可以将该属性设置为 true。
 
-      <span data-ttu-id="95d7b-108">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="95d7b-108">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: isDirty
     fullName: isDirty
     langs:
@@ -46,9 +47,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.WorkbookUpdateData#properties:member'
     summary: |-
-      <span data-ttu-id="95d7b-109">获取工作簿属性。</span><span class="sxs-lookup"><span data-stu-id="95d7b-109">Gets the workbook properties.</span></span>
+      获取工作簿属性。
 
-      <span data-ttu-id="95d7b-110">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="95d7b-110">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: properties
     fullName: properties
     langs:
@@ -59,11 +60,27 @@ items:
       return:
         type:
           - 'excel!Excel.Interfaces.DocumentPropertiesUpdateData:interface'
+  - uid: 'excel!Excel.Interfaces.WorkbookUpdateData#showPivotFieldList:member'
+    summary: |-
+      指定是否在工作簿级别显示数据透视表的 "字段列表" 窗格。
+
+      \[[API 集： EXCELAPI BETA （仅限预览）](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+    isPreview: true
+    name: showPivotFieldList
+    fullName: showPivotFieldList
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'showPivotFieldList?: boolean;'
+      return:
+        type:
+          - boolean
   - uid: 'excel!Excel.Interfaces.WorkbookUpdateData#use1904DateSystem:member'
     summary: |-
-      <span data-ttu-id="95d7b-111">如果工作簿使用 1904 日期系统，则为 True。</span><span class="sxs-lookup"><span data-stu-id="95d7b-111">True if the workbook uses the 1904 date system.</span></span>
+      如果工作簿使用 1904 日期系统，则为 True。
 
-      <span data-ttu-id="95d7b-112">\[[API 集： EXCELAPI BETA （仅限预览）](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="95d7b-112">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： EXCELAPI BETA （仅限预览）](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     isPreview: true
     name: use1904DateSystem
     fullName: use1904DateSystem
@@ -77,9 +94,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.WorkbookUpdateData#usePrecisionAsDisplayed:member'
     summary: |-
-      <span data-ttu-id="95d7b-113">如果此工作簿中的计算仅使用显示的数字精度来完成，则为 True。</span><span class="sxs-lookup"><span data-stu-id="95d7b-113">True if calculations in this workbook will be done using only the precision of the numbers as they're displayed.</span></span> <span data-ttu-id="95d7b-114">将此属性从 false 切换到 true 时，数据将永久丢失精度。</span><span class="sxs-lookup"><span data-stu-id="95d7b-114">Data will permanently lose accuracy when switching this property from false to true.</span></span>
+      如果此工作簿中的计算仅使用显示的数字精度来完成，则为 True。 将此属性从 false 切换到 true 时，数据将永久丢失精度。
 
-      <span data-ttu-id="95d7b-115">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="95d7b-115">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: usePrecisionAsDisplayed
     fullName: usePrecisionAsDisplayed
     langs:
